<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="title_activity_main2">I\'m Hungry!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="searchMenu">search_menu</string>

    <string name="connection_succeed">Connection Succeed</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="error_no_internet">error no internet</string>
    <string name="error_unknown_error">error unknown error</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="title_activity_maps">Map</string>
    <string name="info_user_name_not_found">info user name not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="save_lat__key">pref_key_lat</string>
    <string name="save_Long__key">pref_key_lng</string>
    <string name="save_vicinity_key">pref_key_vicinity</string>
    <string name="save_restaurantName_key">pref_key_restaurantName</string>
    <string name="save_photoRestaurant_key">pref_key_photoRestaurant</string>
    <string name="save_rating_key">pref_key_rating</string>
    <string name="save_photoHeight_key">pref_key_photoHeight</string>
    <string name="save_photoWidth_key">pref_key_photoWidth</string>
    <string name="save_photoRef_key">pref_key_photoRef</string>
    <string name="save_number_of_stars_key">pref_key_number_of_stars</string>
    <string name="save_uid_key">pref_key_uid</string>
    <string name="save_list_restaurantSelected_key">save_list_restaurantSelected_key</string>
    <string name="save_restaurantSelected_key">pref_restaurantSelected_uid</string>


    <string name="info_email_not_found">info email not found</string>
    <string name="vicinity">vicinity</string>
    <string name="photosReference">photosReference</string>
    <string name="name_restaurant">name_restaurant</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="number_of_stars">NumberOfStars</string>

    <string name="photoHeight">photoHeight</string>
    <string name="photoWidth">photoWidth</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="action_settings">Settings</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Application Go4Lunch, which allows you to find and decide where to eat</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">816833522028448</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb816833522028448</string>


    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>
    <string name="receiverId">key_receiverId</string>
    <string name="name_chat_person">key_nameChatPerson</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="is_joining"> is joining!</string>
</resources>
