<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".controler.activities.LoginActivity">

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/BlurImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/restaurantprofil" />


    <ImageView
        android:id="@+id/imageIconGo4Lunch"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icone"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/nameOfApps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageIconGo4Lunch"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="70dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_fb"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/nameOfApps"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@color/colorFaceBook"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/relative_fcb"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in_with_facebook"
                android:textColor="#fff"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/facebook" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/cardView_google"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cardView_fb"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorGoogle"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/relative_google"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_gg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in_with_google"
                android:textColor="#fff"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/google_plus" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>